<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background_image_for_loginapp"
    tools:context="home.example.projects.todoapp.LoginSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/username_marginTop"
            android:gravity="center_horizontal"
            android:text="@string/welcome_user"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/welcome_text_size" />

        <TextView
            android:id="@+id/login_success_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:id="@+id/layout_with_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/write_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/text_color_white"
                android:textColorHint="@color/text_color_white"
                android:textColor="@color/text_color_white"
                android:hint="@string/enter_task_name" />

            <Button
                android:id="@+id/button_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addTask"
                android:background="@drawable/sign_in_button"
                android:textColor="@color/text_color_white"
                android:text="@string/add_task_button_text" />
        </LinearLayout>

        <ListView
            android:layout_margin="8dp"
            android:id="@+id/list_of_tasks"
            android:layout_width="match_parent"
            android:background="#90FFFFFF"
            android:textColor="@color/text_color_white"
            android:layout_height="@dimen/listview_height" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/details_about_add_task_functionality"
            android:textColor="@color/text_color_white"
            android:layout_margin="@dimen/login_button_top_margin"
            />
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/username_marginLeft"
            android:layout_marginRight="@dimen/username_marginRight"
            android:layout_marginTop="@dimen/login_button_top_margin"
            android:background="@drawable/sign_in_button"
            android:text="@string/logout_button_text"
            android:textColor="@color/text_color_white" />

    </LinearLayout>
</ScrollView>